# digit-recognizer

./: .gitignore  LICENSE  README.md  graph.py  out.txt
debug/: CMakeLists.txt
report/: applications-project.tex  graph.py
report/test-1layer-10node/: out.txt
report/test-2layer-10node-act0.1/: out.txt
report/test-2layer-10node-act0.3-2/: out.txt
src/: activation-funcs.c  activation-funcs.cpp  activation-funcs.h  layer.c  layer.cpp  layer.h  layer.hpp  load-img.c  load-img.h  main.c  main.cpp  net.h  network.cpp  network.hpp  test-net.cpp  test-net.hpp  train.cpp  train.hpp
src/libs/: CMakeLists.txt  blas-wrapper.c  blas-wrapper.cpp  blas-wrapper.h  blas-wrapper.hpp  blas_wrapper.c  blas_wrapper.h  load-img.c  load-img.cpp  load-img.hpp  rand.c  rand.cpp  rand.h  rand.hpp
src/libs/tests/: CMakeLists.txt  TEST-blas-wrapper.cpp
src/network/: CMakeLists.txt  activation-funcs.cpp  activation-funcs.hpp  cost-funcs.cpp  cost-funcs.hpp  layer.cpp  layer.hpp  network.cpp  network.hpp
src/network/tests/: TEST-cost-funcs.cpp
test-2layer-10node-act0.3/: out.txt
